second blog post and additional updates

--- a/template/_base.html
+++ b/template/_base.html
@@ -42,5 +42,8 @@ and is wrapped around the whole page content, except for the footer in this exam
     Clayton S. Cook - 2022
 </footer>
 
+<!-- Javascript Files -->
+{% block js_files %}{% endblock %}
+
 </body>
 </html>
