--- a/template/blog/_blog.html
+++ b/template/blog/_blog.html
@@ -8,9 +8,14 @@
 
 {% block content %}
 <div class="w3-card-4 w3-margin w3-white">
-  <img src="../static/images/{{ blog_post.main_image }}" alt="image_1400x440" 
+  <div class="w3-display-container">
+    <img src="../static/images/{{ blog_post.main_image }}" alt="image_1400x440" 
     style="width:100%"
-  >
+    >
+    {% if blog_post.photo_credit %}
+    <div class="w3-tag w3-black w3-tiny w3-display-bottomright">{{ blog_post.photo_credit | safe }}</div>
+    {% endif %}
+  </div>
   <div class="w3-container w3-content">
     <h1><b><u>{{ blog_post.title }}</u></b></h1>
     <h5><span class="w3-opacity">{{ blog_post.date  }}</span></h5>
