--- a/template/_index.html
+++ b/template/_index.html
@@ -50,20 +50,63 @@
 
 <!-- Introduction menu -->
 <div class="w3-col l4">
+  <!-- Projects Card -->
+  <div class="w3-card w3-margin w3-white">
+    <header class="w3-container w3-center">
+      <h3><b><u>Side Projects</u></b></h3>
+    </header>
+    <!-- Project 1 -->
+    <a
+    href="html_projects/auto-foinn-sesium/auto-foinn-sesium.html"
+    class=""
+    style="text-decoration: none;"
+    >
+      <div class="w3-container w3-hover-green">           
+        <img src="static/images/autoFoinnSeisiumPage.png" 
+          alt="autofoinnsesiumpic"
+          class="w3-left w3-margin" 
+          style="width:60px">
+        <h5>Auto Foinn Seisum</h5>
+        <p style="margin-left: 70px;">
+          A web player for practicing with Irish session music.
+        </p>
+      </div>
+    </a>
+    <!-- Project 2 -->
+    <a
+    href="https://vgsdb.com/"
+    target="_blank"
+    class=""
+    style="text-decoration: none;"
+    >
+      <div class="w3-container w3-hover-green">           
+        <img src="static/images/vgsdbimage.png" 
+          alt="autofoinnsesiumpic"
+          class="w3-left w3-margin" 
+          style="width:60px">
+        <h5>Heaton Virtual Guided Session Database</h5>
+        <p style="margin-left: 90px;">
+          An online database for tunes played for the Virtual
+          Guided Session.
+        </p>
+      </div>
+    </a>
+  </div><hr>
+
   <!-- About Card -->
-  <div class="w3-card w3-margin w3-margin-top">
+  <div class="w3-card-4 w3-margin l4">
   <img src="static/images/{{ head_shot }}" alt="head_shot" style="width:100%">
     <div class="w3-container w3-white">
-      <h4><b>{{ blogger_name }}</b></h4>
+      <h4><b>Clayton Cook</b></h4>
       <p>
         Hello! This is my budding online blog where I write about programming
-        interests and hopefully house some projects.
+        interests and projects.
       </p>
     </div>
   </div><hr>
   
   <!-- Main Posts -->
-  <div class="w3-card w3-margin" hidden>
+  <div class="w3-card-4 w3-margin" hidden>
     <div class="w3-container w3-padding">
       <h4>Main Posts</h4>
     </div>
