working tags html elements -> need to add tags pages

--- a/template/_index.html
+++ b/template/_index.html
@@ -31,6 +31,16 @@
         {{ blog_post.short_desc }}
       </p>
       <div class="w3-row">
+        Tags:<br>
+        {% if blog_post.tags %}
+          {% for tag in blog_post.tags %}
+            <span class="w3-tag w3-light-grey w3-hover-green">
+              {{ tag }}
+            </span>
+          {% endfor %}
+        {% endif %}
+      </div>
+      <div class="w3-row">
         <div class="w3-col m8 s12">
           <p><button 
             class="w3-button w3-padding-large w3-white w3-border"
