--- a/template/blog/_blog.html
+++ b/template/blog/_blog.html
@@ -19,6 +19,18 @@
   <div class="w3-container w3-content">
     <h1><b><u>{{ blog_post.title }}</u></b></h1>
     <h5><span class="w3-opacity">{{ blog_post.date  }}</span></h5>
+    <div class="w3-row">
+      Tags:<br>
+      {% if blog_post.tags %}
+        {% for tag in blog_post.tags %}
+          <span class="w3-tag w3-light-grey w3-hover-green">
+            {{ tag }}
+          </span>
+        {% endfor %}
+      {% endif %}
+    </div>
+
+    <hr>
 
     <!-- Blog -->
     <div class="w3-margin-bottom">
