--- a/template/tag/_tag.html
+++ b/template/tag/_tag.html
@@ -7,6 +7,29 @@
 {% endblock %}
 
 {% block content %}
-"tag.html"
-{{ tag }}
+<div class="w3-card-4 w3-margin w3-white">
+  <div class="w3-container w3-content">
+    <h1><b>
+      Tag: 
+      <span 
+        class="w3-tag w3-green"
+      >
+        {{ tag }}
+      </span>
+    </b></h1>
+    <hr>
+
+    <div class="w3-row">
+      <div class="w3-col m8 s12">
+        <p><button 
+          class="w3-button w3-padding-large w3-white w3-border"
+          type="button"
+          onclick="location.href='{{index_ref}}index.html'"
+          >
+          <b>Back to Home</b>
+        </button></p>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
