--- a/template/tag/_tag.html
+++ b/template/tag/_tag.html
@@ -19,6 +19,16 @@
     </b></h1>
     <hr>
 
+    <!-- Blog entry -->
+    <h2>Blog Posts With Matching Tag</h2>
+    <ul>
+    {% for blog_post in blog_posts %}
+      <li>
+        {% include 'partial/_blog_short.html' %}
+      </li>
+    {% endfor %}
+    </ul>
+
     <div class="w3-row">
       <div class="w3-col m8 s12">
         <p><button 
