--- a/template/_base.html
+++ b/template/_base.html
@@ -16,20 +16,57 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </head>
 <body class="w3-light-grey">
 
+<!-- Navigation 2 -->
+<div class="w3-bar w3-white" style="border-bottom: green 4px solid;">
+  <div class="w3-container w3-center w3-hide-medium w3-hide-small" style="font-size: 24px;">
+    <a href="{{ index_ref }}index.html" style="text-decoration: none;">
+      <img 
+      src="{{ index_ref }}static/images/cc_cog_order_to_disorder.svg"
+      alt="csc_cog"
+      style="max-height: 60px; margin: 10px;"
+      >
+    </a>
+    Clayton Cook P.E. 
+      <span class="w3-text-grey" style="font-size: 20px;">
+        | Engineer, Programmer, and Musician
+      </span>
+  </div>
+
+  <div class="w3-container w3-center w3-hide-large" style="font-size: 18px;">
+    <a href="{{ index_ref }}index.html">
+      <img 
+      src="{{ index_ref }}static/images/cc_cog_order_to_disorder.svg"
+      alt="csc_cog"
+      style="max-height: 60px; margin: 10px;"
+      >
+    </a><br>
+    Clayton Cook P.E.       
+      <span class="w3-text-grey" style="font-size: 14px;">
+        | Engineer, Programmer, and Musician
+      </span>
+  </div>
+
+  <div hidden>
+    <div class="w3-center">
+      <a href="#" class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">Link 1</a>
+      <a href="#" class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">Link 2</a>
+      <a href="#" class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">Link 3</a>
+      <a href="javascript:void(0)" class="w3-button w3-left w3-hide-large w3-hide-medium w3-hover-none w3-text-grey w3-hover-text-black" onclick="myFunction()">&#9776;</a>
+    </div>
+  
+    <div id="navbar-id" class="w3-center w3-bar-block w3-hide w3-hide-large w3-hide-medium">
+      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">Link 1</a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">Link 2</a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">Link 3</a>
+    </div>
+  </div>
+</div>
+
+
+
 <!-- w3-content defines a container for fixed size centered content, 
 and is wrapped around the whole page content, except for the footer in this example -->
 <div class="w3-content" style="max-width:1400px">
-
-<!-- Header -->
-<header class="w3-container w3-center w3-padding-8"> 
-  <!-- Navigation -->
-  <h1>
-    <img src="{{index_ref}}static/images/cc_cog_order_to_disorder.svg" alt="csc_cog">
-    <a href="{{ index_ref }}index.html" class="w3-hover-text-green" style="text-decoration: none">
-      Clayton's Blog
-    </a>
-  </h1>
-</header>
 
 <!-- Main Content -->
 {% block content %}{% endblock %}
@@ -45,5 +82,16 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Javascript Files -->
 {% block js_files %}{% endblock %}
 
+<!-- Navigation Script -->
+<script>
+  function myFunction() {
+    var x = document.getElementById("navbar-id");
+    if (x.className.indexOf("w3-show") == -1) {
+      x.className += " w3-show";
+    } else { 
+      x.className = x.className.replace(" w3-show", "");
+    }
+  }
+</script>
 </body>
 </html>
