--- a/template/_index.html
+++ b/template/_index.html
@@ -102,7 +102,7 @@
       <span 
         class="w3-tag w3-light-grey w3-hover-green"
         style="margin: 1px; padding: 1px;"
-        onclick="location.href='{{index_ref}}/tag/{{ tag }}.html'"
+        onclick="location.href='tag/{{ tag }}.html'"
       >
         {{ tag }}
       </span>
