--- a/template/_base.html
+++ b/template/_base.html
@@ -48,23 +48,37 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </span>
   </div>
 
-  <div hidden>
+  <div>
     <div class="w3-center">
-      <a href="#" class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">Link 1</a>
-      <a href="#" class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">Link 2</a>
-      <a href="#" class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">Link 3</a>
-      <a href="javascript:void(0)" class="w3-button w3-left w3-hide-large w3-hide-medium w3-hover-none w3-text-grey w3-hover-text-black" onclick="myFunction()">&#9776;</a>
+      <a href="{{ index_ref }}index.html" 
+        class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">
+        Home
+      </a>
+      <a href="about.html"
+        class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">
+        About
+      </a>
+      <!-- <a href="#"
+        class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">
+        Music
+      </a> -->
+      <a href="javascript:void(0)" 
+        class="w3-button w3-right w3-hide-large w3-hide-medium w3-hover-none w3-text-grey w3-hover-text-black" onclick="myFunction()">&#9776;</a>
     </div>
   
     <div id="navbar-id" class="w3-center w3-bar-block w3-hide w3-hide-large w3-hide-medium">
-      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">Link 1</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">Link 2</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">Link 3</a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
+        Home
+      </a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
+        About
+      </a>
+      <!-- <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
+        Music
+      </a> -->
     </div>
   </div>
 </div>
-
-
 
 <!-- w3-content defines a container for fixed size centered content, 
 and is wrapped around the whole page content, except for the footer in this example -->
