--- a/template/_base.html
+++ b/template/_base.html
@@ -54,7 +54,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">
         Home
       </a>
-      <a href="about.html"
+      <a href="{{ index_ref }}about.html"
         class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">
         About
       </a>
@@ -67,10 +67,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
   
     <div id="navbar-id" class="w3-center w3-bar-block w3-hide w3-hide-large w3-hide-medium">
-      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
+      <a href="{{ index_ref }}index.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
         Home
       </a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
+      <a href="{{ index_ref }}about.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
         About
       </a>
       <!-- <a href="#" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
