--- a/template/_base.html
+++ b/template/_base.html
@@ -11,6 +11,7 @@
 <!-- CSS Styles -->
 {% block css_styles %}{% endblock %}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="{{ index_ref }}static/css/prism.css">
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
@@ -113,6 +114,9 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Javascript Files -->
 {% block js_files %}{% endblock %}
+
+<!-- Prism Code Highlights -->
+<script src="{{ index_ref }}static/js/prism.js"></script>
 
 <!-- Navigation Script -->
 <script>
