update tag to obj

--- a/template/_index.html
+++ b/template/_index.html
@@ -89,7 +89,7 @@
       <span 
         class="w3-tag w3-light-grey w3-hover-green"
         style="margin: 1px; padding: 1px;"
-        onclick="location.href='tag/{{ tag }}.html'"
+        onclick="location.href='tag/{{ tag.tag_slug() }}.html'"
       >
         {{ tag }}
       </span>
