--- a/template/_base.html
+++ b/template/_base.html
@@ -58,6 +58,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">
         Home
       </a>
+      <a href="{{ index_ref }}music.html"
+        class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">
+        Music
+      </a>
       <a href="{{ index_ref }}about.html"
         class="w3-button w3-hide-small w3-hover-none w3-text-grey w3-hover-text-black">
         About
@@ -73,6 +77,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div id="navbar-id" class="w3-center w3-bar-block w3-hide w3-hide-large w3-hide-medium">
       <a href="{{ index_ref }}index.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
         Home
+      </a>
+      <a href="{{ index_ref }}music.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
+        Music
       </a>
       <a href="{{ index_ref }}about.html" class="w3-bar-item w3-button w3-hover-none w3-text-grey w3-hover-text-black">
         About
