--- a/html_projects/image-crop-and-resize/css/style.css
+++ b/html_projects/image-crop-and-resize/css/style.css
@@ -1,181 +1,45 @@
-/* Import Google font - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-body{
-  display: flex;
-  padding: 10px;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
-  background: #2e2e2e;
-}
-.container{
-  width: 850px;
-  padding: 30px 35px 35px;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-}
-.container.disable .editor-panel,
-.container.disable .controls .reset-filter,
-.container.disable .controls .save-img{
-  opacity: 0.5;
-  pointer-events: none;
-}
-.container h2{
-  margin-top: -8px;
-  font-size: 22px;
-  font-weight: 500;
-}
-.container .wrapper{
-  display: flex;
-  margin: 20px 0;
-  min-height: 335px;
-}
-.wrapper .editor-panel{
-  padding: 15px 20px;
-  width: 280px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-}
-.editor-panel .title{
-  display: block;
-  font-size: 16px;
-  margin-bottom: 12px;
-}
-.editor-panel .options, .controls{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.editor-panel button{
-  outline: none;
-  height: 40px;
-  font-size: 14px;
-  color: #6C757D;
-  background: #fff;
-  border-radius: 3px;
-  margin-bottom: 8px;
-  border: 1px solid #aaa;
-}
-.editor-panel .filter button{
-  width: calc(100% / 2 - 4px);
-}
-.editor-panel button:hover{
-  background: #f5f5f5;
-}
-.filter button.active{
-  color: #fff;
-  border-color: #7af053;
-  background: #7af053;
-}
-.filter .slider{
-  margin-top: 12px;
-}
-.filter .slider .filter-info{
-  display: flex;
-  color: #464646;
-  font-size: 14px;
-  justify-content: space-between;
-}
-.filter .slider input{
-  width: 100%;
-  height: 5px;
-  accent-color: #7af053;
-}
-.editor-panel .rotate{
-  margin-top: 17px;
-}
-.editor-panel .rotate button{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: calc(100% / 4 - 3px);
-}
-.rotate .options button:nth-child(3),
-.rotate .options button:nth-child(4){
-  font-size: 18px;
-}
-.rotate .options button:active{
-  color: #fff;
-  background: #7af053;
-  border-color: #7af053;
-}
-.wrapper .preview-img{
-  flex-grow: 1;
-  display: flex;
-  overflow: hidden;
-  margin-left: 20px;
-  border-radius: 5px;
-  align-items: center;
-  justify-content: center;
-}
-.preview-img img{
-  max-width: 490px;
-  max-height: 335px;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-.controls button{
-  padding: 11px 20px;
-  font-size: 14px;
-  border-radius: 3px;
-  outline: none;
-  color: #fff;
-  cursor: pointer;
-  background: none;
-  transition: all 0.3s ease;
-  text-transform: uppercase;
-}
-.controls .reset-filter{
-  color: #6C757D;
-  border: 1px solid #6C757D;
-}
-.controls .reset-filter:hover{
-  color: #fff;
-  background: #6C757D;
-}
-.controls .choose-img{
-  background: #6C757D;
-  border: 1px solid #6C757D;
-}
-.controls .save-img{
-  margin-left: 5px;
-  background: #7af053;
-  border: 1px solid #7af053;
-}
-
-@media screen and (max-width: 760px) {
-  .container{
-    padding: 25px;
+/* The snackbar - position it at the bottom and in the middle of the screen */
+#snackbar {
+    visibility: hidden; /* Hidden by default. Visible on click */
+    min-width: 250px; /* Set a default minimum width */
+    margin-left: -125px; /* Divide value of min-width by 2 */
+    background-color: #333; /* Black background color */
+    color: #fff; /* White text color */
+    text-align: center; /* Centered text */
+    border-radius: 2px; /* Rounded borders */
+    padding: 16px; /* Padding */
+    position: fixed; /* Sit on top of the screen */
+    z-index: 1; /* Add a z-index if needed */
+    left: 50%; /* Center the snackbar */
+    bottom: 30px; /* 30px from the bottom */
   }
-  .container .wrapper{
-    flex-wrap: wrap-reverse;
+  
+  /* Show the snackbar when clicking on a button (class added with JavaScript) */
+  #snackbar.show {
+    visibility: visible; /* Show the snackbar */
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+    However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
   }
-  .wrapper .editor-panel{
-    width: 100%;
+  
+  /* Animations to fade the snackbar in and out */
+  @-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
   }
-  .wrapper .preview-img{
-    width: 100%;
-    margin: 0 0 15px;
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
   }
-}
-
-@media screen and (max-width: 500px) {
-  .controls button{
-    width: 100%;
-    margin-bottom: 10px;
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
   }
-  .controls .row{
-    width: 100%;
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
   }
-  .controls .row .save-img{
-    margin-left: 0px;
-  }
-}
