Update music html page

--- a/template/_music.html
+++ b/template/_music.html
@@ -38,9 +38,9 @@
     <h2 class="w3-center">Music</h2>
 
     <p class="w3-left-align">
-    I love to play music. I started by playing the trombone in middle and high school. From there
-    I learned the guitar, mandolin, bass and irish flute. I will be adding the tunes that I can
-    play to this page to help with my learning and share what I know. Additionally, see some thoughts
+    I love to play music.I will be adding the tunes that I can
+    play to this page to help with my learning and share what I know.
+    Additionally, see some thoughts
     on my favorite musicians below.
     </p>
 
