--- a/template/_favorite_links.html
+++ b/template/_favorite_links.html
@@ -114,6 +114,12 @@
                     </a>
                     - Online ABC JS Quick Editor
                 </li>
+                <li>
+                    <a href="https://stackblitz.com/" target="_blank">
+                        StackBlitz
+                    </a>
+                    - Get a sharable javascript environment up and in seconds
+                </li>
             </ul>
 
             <h3 class="w3-left-align" onclick="w3HideById('Images/IconsList')" style="cursor: pointer;">
