minor grammer update

--- a/template/_favorite_links.html
+++ b/template/_favorite_links.html
@@ -118,7 +118,7 @@
                     <a href="https://stackblitz.com/" target="_blank">
                         StackBlitz
                     </a>
-                    - Get a sharable javascript environment up and in seconds
+                    - Get a sharable javascript environment up in seconds
                 </li>
             </ul>
 
