--- a/template/static/css/clayton-cook-website.css
+++ b/template/static/css/clayton-cook-website.css
@@ -10,3 +10,11 @@ a:hover {
 .w3-tag {
     cursor: pointer;
 }
+
+.grow { 
+    transition: all .2s ease-in-out; 
+    }
+    
+.grow:hover { 
+    transform: scale(1.1); 
+}
