add link for Django SaaS project

--- a/template/_favorite_links.html
+++ b/template/_favorite_links.html
@@ -48,6 +48,11 @@
                     - Free Book for Understanding the Django python web framework
                 </li>
                 <li>
+                    <a href="https://www.mattlayman.com/blog/2023/new-saas-from-scratch-building-saas-with-python-and-django-160/" target="_blank">
+                        New SaaS From Scratch - Building SaaS with Python and Django
+                    </a>
+                </li> by Matt Layman
+                <li>
                     <a href="https://greenteapress.com/wp/" target="_blank">
                         Green Tea Press
                     </a>
