--- a/template/_favorite_links.html
+++ b/template/_favorite_links.html
@@ -76,6 +76,12 @@
                     </a>
                     - Angular + Web
                 </li>
+                <li>
+                    <a href="https://0xfe.blogspot.com/" target="_blank">
+                        https://0xfe.blogspot.com/
+                    </a>
+                    - Mohit Muthanna Cheppudira Web Blog (Developer) 
+                </li>
             </ul>
 
             <h3 class="w3-left-align" onclick="w3HideById('TechToolsList')" style="cursor: pointer;">
@@ -124,6 +130,13 @@
                         StackBlitz
                     </a>
                     - Get a sharable javascript environment up in seconds
+                </li>
+                <li>
+                    <a href="https://www.audioshake.ai/" target="_blank">
+                        https://www.audioshake.ai/
+                    </a>
+                    - Create Audio Stems From Audio
+                    
                 </li>
             </ul>
 
