add favorite link

--- a/template/_favorite_links.html
+++ b/template/_favorite_links.html
@@ -65,6 +65,12 @@
                     - Resources and training for C# development
                 </li>
                 <li>
+                    <a href="https://www.brentozar.com/" target="_blank">
+                        Brent Ozar
+                    </a>
+                    - Blog, Resources and Training for Microsoft SQL Server
+                </li>
+                <li>
                     <a href="https://www.angulartraining.com/" target="_blank">
                         Angular Training
                     </a>
