--- a/template/_favorite_links.html
+++ b/template/_favorite_links.html
@@ -20,12 +20,12 @@
                 Favorite Links
             </h2>
 
-            <p class="w3-left-align">
+            <p class="w3-center-align">
                 This is just a list of my favorite pages on the internet listed
                 by topic.
             </p>
 
-            <h3 class="w3-left-align" onclick="w3HideById('TechTeachingList')" style="cursor: pointer;">
+            <h3 class="w3-center-align" onclick="w3HideById('TechTeachingList')" style="cursor: pointer;">
                 Tech Teaching <i class="fa fa-caret-down fa-xs"></i>
             </h3>
             <ul class="w3-left-align" id="TechTeachingList">
@@ -90,7 +90,7 @@
                 </li>
             </ul>
 
-            <h3 class="w3-left-align" onclick="w3HideById('TechToolsList')" style="cursor: pointer;">
+            <h3 class="w3-center-align" onclick="w3HideById('TechToolsList')" style="cursor: pointer;">
                 Tech Tools <i class="fa fa-caret-down  fa-xs"></i>
             </h3>
             <ul class="w3-left-align" id="TechToolsList">
@@ -146,7 +146,7 @@
                 </li>
             </ul>
 
-            <h3 class="w3-left-align" onclick="w3HideById('Images/IconsList')" style="cursor: pointer;">
+            <h3 class="w3-center-align" onclick="w3HideById('Images/IconsList')" style="cursor: pointer;">
                 Images/Icons <i class="fa fa-caret-down fa-xs"></i>
             </h3>
             <ul class="w3-left-align" id="Images/IconsList">
@@ -164,7 +164,7 @@
                 </li>
             </ul>
 
-            <h3 class="w3-left-align" onclick="w3HideById('IrishFluteList')" style="cursor: pointer;">
+            <h3 class="w3-center-align" onclick="w3HideById('IrishFluteList')" style="cursor: pointer;">
                 Irish Flute <i class="fa fa-caret-down fa-xs"></i>
             </h3>
             <ul class="w3-left-align" id="IrishFluteList">
@@ -188,7 +188,7 @@
                 </li>
             </ul>
 
-            <h3 class="w3-left-align" onclick="w3HideById('GuitarList')" style="cursor: pointer;">
+            <h3 class="w3-center-align" onclick="w3HideById('GuitarList')" style="cursor: pointer;">
                 Guitar <i class="fa fa-caret-down fa-xs"></i>
             </h3>
             <ul class="w3-left-align" id="GuitarList">
@@ -200,7 +200,7 @@
                 </li>
             </ul>
 
-            <h3 class="w3-left-align" onclick="w3HideById('MelodyAndSongWritingList')" style="cursor: pointer;">
+            <h3 class="w3-center-align" onclick="w3HideById('MelodyAndSongWritingList')" style="cursor: pointer;">
                 Melody and Song Writing <i class="fa fa-caret-down fa-xs"></i>
             </h3>
             <ul class="w3-left-align" id="MelodyAndSongWritingList">
