update about page

--- a/template/_about.html
+++ b/template/_about.html
@@ -34,7 +34,7 @@
       </div>
       <p>
         Hello! This is my budding online webpage where I write about programming
-        interests and projects.
+        interests, music and side projects.
       </p>
     </div>
   </div>
