update cadd reference page

--- a/template/_cadd.html
+++ b/template/_cadd.html
@@ -36,7 +36,7 @@
             </ul>
 
             <h3 class="w3-left-align" onclick="w3HideById('List2')" style="cursor: pointer;">
-                Carlson <i class="fa fa-caret-down  fa-xs"></i>
+                Carlson <i class="fa fa-caret-down fa-xs"></i>
             </h3>
             <ul class="w3-left-align" id="List2">
                 <li>
@@ -44,6 +44,16 @@
                         Carlson Software's Training Webinars
                     </a>
                     - Recorded Webinars on Carlson Software
+                </li>
+                <li>
+                    <img src="static/icon/icons8-star-48.png" height="18">
+                    <a href="https://attendee.gotowebinar.com/recording/962156657543325186" target="_blank">
+                        Getting Started With Carlson
+                    </a>
+                    - Best Place To Start when getting familiar with Carlson software. Is an introductory
+                    webinar, recorded in 2022, that covers Carlson specific settings for both projects and
+                    individual files, importing points and various tools to display/edit points from a crd file. Really good
+                    training to get you feed wet with the Carlson software package.
                 </li>
             </ul>
 
