update cad page

--- a/template/_cad.html
+++ b/template/_cad.html
@@ -55,6 +55,14 @@
                     individual files, importing points and various tools to display/edit points from a crd file. Really good
                     training to get you feed wet with the Carlson software package.
                 </li>
+                <li>
+                    <a href="https://register.gotowebinar.com/recording/4364924145995306511" target="_blank">
+                        Creating Carlson Surfaces
+                    </a>
+                    - Best place to start when getting familiar creating surfaces in Carlson software. Is an introductory
+                    webinar, recorded in 2022, that covers Carlson specific functions for creating surfaces from
+                    collected survey points and also gives some idea on how that can be incorporated with field to finish.
+                </li>
             </ul>
 
             <div class="w3-row w3-left-align">
