--- a/template/_cad.html
+++ b/template/_cad.html
@@ -63,6 +63,14 @@
                     webinar, recorded in 2022, that covers Carlson specific functions for creating surfaces from
                     collected survey points and also gives some idea on how that can be incorporated with field to finish.
                 </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=fufg4VQBYQA" target="_blank">
+                        Existing and Design Modeling Made Easy With SiteNET
+                    </a>
+                    - Introductory use of Carlson SiteNET tools. Shows the Carlson tools that you can use to design
+                    existing surfaces as well as proposed surfaces. The examples given is a building pad, parking lot,
+                    and access road placed on existing ground. 
+                </li>
             </ul>
 
             <div class="w3-row w3-left-align">
