update analysis example link

--- a/template/_analysis_ex.html
+++ b/template/_analysis_ex.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://nbviewer.org/github/claytoncook12/CPTPython/blob/master/Warren%20Co.%2C%203-8818.00%2C%20CPT%20Analysis.ipynb" target="_blank"
+                    <a href="https://github.com/claytoncook12/CPTPython/blob/master/Warren%20Co.%2C%203-8818.00%2C%20CPT%20Analysis.ipynb" target="_blank"
                     style="color:#4BAF50;"
                     >
                         Warren Co. CPT Analysis
