update cad page

--- a/template/_cad.html
+++ b/template/_cad.html
@@ -71,6 +71,12 @@
                     existing surfaces as well as proposed surfaces. The examples given is a building pad, parking lot,
                     and access road placed on existing ground. 
                 </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=x1_9mSIieOk" target="_blank">
+                        Merging Tins
+                    </a>
+                    - Use of Carlson tools for merging tin files.
+                </li>
             </ul>
 
             <div class="w3-row w3-left-align">
