--- a/template/blog/_blog.html
+++ b/template/blog/_blog.html
@@ -1,9 +1,28 @@
 {% extends '_base.html' %}
 
 {% block css_styles %}
-  {% for css_style in css_style_sheets %}
-    <link rel="stylesheet" href="../static/css/{{ css_style }}">
-  {% endfor %}
+{% for css_style in css_style_sheets %}
+  <link rel="stylesheet" href="../static/css/{{ css_style }}">
+{% endfor %}
+<style>
+  .iframe-container {
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+      padding-top: 56.25%;
+      /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }
+
+  .responsive-iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+  }
+</style>
 {% endblock %}
 
 {% block content %}
