add brett radliff recordings

--- a/template/_music.html
+++ b/template/_music.html
@@ -99,6 +99,75 @@
                 <iframe class="responsive-iframe" src="https://www.youtube.com/embed/GoevLwodZws?t=195">
                 </iframe>
             </div>
+
+            <hr>
+            <h3 class="w3-center">Lessons From Brett Ratliff</h3>
+
+            <p class="w3-left-align">
+                I have took a few fiddle lessons from Brett Ratliff and will be listing a few of those
+                lesson recordings for my future reference here.
+            </p>
+
+            <p>
+                <figcaption class="w3-center">
+                    <b>Bret Radliff - Red Lick</b>
+                </figcaption>
+                <audio controls>
+                    <source src="static/audio/brettradliffrecordings/RedLick-BrettRatliff.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </p>
+
+            <p>
+                <figcaption class="w3-center">
+                    <b>Mississippi Sawyer - Learning Recording</b>
+                </figcaption>
+                <audio controls>
+                    <source src="static/audio/brettradliffrecordings/MississippiSawyer.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </p>
+
+            <p>
+                <figcaption class="w3-center">
+                    <b>Mississippi Sawyer - Play Together</b>
+                </figcaption>
+                <audio controls>
+                    <source src="static/audio/brettradliffrecordings/MississippiSawyerPlayTogether.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </p>
+
+            <p>
+                <figcaption class="w3-center">
+                    <b>Soilders Joy - Full Play Through</b>
+                </figcaption>
+                <audio controls>
+                    <source src="static/audio/brettradliffrecordings/SoildersJoyFullPlayThrough.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </p>
+
+            <p>
+                <figcaption class="w3-center">
+                    <b>Soilders Joy - Part B</b>
+                </figcaption>
+                <audio controls>
+                    <source src="static/audio/brettradliffrecordings/SoildersJoyPartB.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </p>
+
+            <p>
+                <figcaption class="w3-center">
+                    <b>Cross Tuning Tune </b>
+                </figcaption>
+                <audio controls>
+                    <source src="static/audio/brettradliffrecordings/CrossTuningTune.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </p>
+
         </div>
     </div>
 </div>
