finish blog post'

--- a/template/_favorite_links.html
+++ b/template/_favorite_links.html
@@ -144,6 +144,12 @@
                     - Create Audio Stems From Audio
                     
                 </li>
+                <li>
+                    <a href="https://pixlr.com/express/" target="_blank">
+                        Pixlr Express
+                    </a>
+                    - Free AI Photo Editor Online
+                </li>
             </ul>
 
             <h3 class="w3-center-align" onclick="w3HideById('Images/IconsList')" style="cursor: pointer;">
