--- a/template/_lifter_1.html
+++ b/template/_lifter_1.html
@@ -77,7 +77,27 @@
             </button>
             <div id="section2" class="w3-container w3-hide">
                 <img
-                    src="static/images/workouts/__.jpg"
+                    src="static/images/workouts/deadlift.jpg"
+                    class="w3-image w3-grayscale-max"
+                    style="max-width: 90%;">
+                    <img
+                    src="static/images/workouts/stepup.jpg"
+                    class="w3-image w3-grayscale-max"
+                    style="max-width: 90%;">
+                    <img
+                    src="static/images/workouts/dbpress.jpg"
+                    class="w3-image w3-grayscale-max"
+                    style="max-width: 90%;">
+                    <img
+                    src="static/images/workouts/lat_pulldown.jpg"
+                    class="w3-image w3-grayscale-max"
+                    style="max-width: 90%;">
+                    <img
+                    src="static/images/workouts/lat_pulldown_2.jpg"
+                    class="w3-image w3-grayscale-max"
+                    style="max-width: 90%;">
+                    <img
+                    src="static/images/workouts/reverse_crunch.jpg"
                     class="w3-image w3-grayscale-max"
                     style="max-width: 90%;">
             </div>
