add whistle sign up page

--- a/template/_index.html
+++ b/template/_index.html
@@ -25,7 +25,24 @@
 <div class="w3-col l4">
   <!-- Projects Card -->
   <h2 class="w3-center">Side Projects</h2>
-  <div class="w3-card w3-margin w3-white">
+<div class="w3-card w3-margin w3-white">
+    <!-- Whistle Class -->
+    <a
+    href="html_projects/spring-2025-whistle-class/sign-up.html"
+    class=""
+    style="text-decoration: none;"
+    >
+      <div class="w3-container w3-hover-green">           
+        <img src="static/images/spring_2025_sign_up.png" 
+          alt="spring2025signup"
+          class="w3-left w3-margin" 
+          style="width:60px">
+        <h5>Spring 2025 Whistle<br>Sign-Ups</h5>
+        <p style="margin-left: 70px;">
+          Sign up page for the Spring 2025 Whistle Class
+        </p>
+      </div>
+    </a>
     <!-- Project 1 -->
     <a
     href="html_projects/auto-foinn-sesium/auto-foinn-sesium.html"
