add fall class signup

--- a/template/_index.html
+++ b/template/_index.html
@@ -59,7 +59,7 @@
   <h2 class="w3-center w3-padding-large">Side Projects</h2>
     <!-- Whistle Class -->
     <a
-    href="html_projects/spring-2025-whistle-class/sign-up.html"
+    href="html_projects/fall-2025-music-class/sign-up.html"
     class=""
     style="text-decoration: none;"
     >
@@ -68,9 +68,8 @@
           alt="spring2025signup"
           class="w3-left w3-margin" 
           style="width:60px">
-        <h5>Spring 2025 Whistle<br>Sign-Ups</h5>
+        <h5>Fall 2025 Music Class <br>Sign-Ups</h5>
         <p style="margin-left: 70px;">
-          Sign up page for the Spring 2025 Whistle Class
         </p>
       </div>
     </a>
